2007-04-02  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/community.R 
	(edge.betweenness.community) : added
	* interfaces/R/src/rinterface.c 
	(R_igraph_community_edge_betweenness) : added

	* interfaces/R/igraph/R/structural.properties.R 
	(topological.sort) : added
	* interfaces/R/src/rinterface.c (R_igraph_topological_sorting) : added

	* interfaces/R/igraph/R/community.R (walktrap.community) : added
	* interfaces/R/src/rinterface.c (R_igraph_walktrap_community) : added

2007-03-31  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (read.graph, read.graph.graphdb) :
	support added for graphdb format

	* interfaces/R/igraph/R/foreign.R (graph.graphdb) : read the 
	graph using the C level function
	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphdb) : added

	* interfaces/R/igraph/R/foreign.R (read.graph.toraw) : modified to
	read the file in binary mode
	
2007-03-30  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/foreign.R (graph.graphdb) : added

	* interfaces/R/igraph/R/topology.R (graph.isomorphic.vf2) : added
	* interfaces/R/src/rinterface.c (R_igraph_isomorphic_vf2) : added

2007-03-29  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/revolver.R (evolver.d, evolver.ad) : added
	* interfaces/R/src/rinterface.c (R_igraph_evolver_d)
	(R_igraph_evolver_ad) : added

	* interfaces/R/src/rinterface.c (R_igraph_vector_to_SEXP)
	(R_igraph_0orvector_to_SEXP, R_igraph_0ormatrix_to_SEXP) : added	

2007-03-26  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	which argument added to choose from the two expected citations
	calculation versions
	* interfaces/R/src/rinterface.c
	(R_igraph_measure_dynamics_id_expected) : updated accordingly

2007-03-25  Gabor Csardi  <csardi@rmki.kfki.hu>

	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id)
	(measure.dynamics.idage) : 'error' argument added